# segy-daos

./: .gitignore  CONTRIBUTORS.txt  README.md  SConstruct
include/: README.md
mains/: SConscript  daos_seis_add_headers.c  daos_seis_change_headers.c  daos_seis_file_mount.c  daos_seis_get_headers.c  daos_seis_get_traces_count.c  daos_seis_parse_additional_file.c  daos_seis_parse_segy_file.c  daos_seis_range_headers.c  daos_seis_read_traces.c  daos_seis_set_headers.c  daos_seis_sort_headers.c  daos_seis_update_traces_data.c  daos_seis_wind_headers.c
scripts/: daos_seis_prepare_tests.sh  daos_seis_tests.sh  dsg_tests.sh  env.sh  install_cmocka_ubuntu.sh  install_scons_ubuntu.sh  prepare_test.sh  run_tests.sh  time_tests.sh
src/: README.md  SConscript
src/api/: README.md  SConscript  seismic_graph_api.c
src/cwp/: CMakeLists.txt  SConscript  differentiate.c  strstuff.c  tempname.c
src/daos_primitives/: README.md  SConscript  array.c  dfs_helpers.c  object.c  operations_controller.c
src/data_structures/: SConscript  doubly_linked_list.c
src/data_types/: README.md  SConscript  ensemble.c  generic_value.c  trace.c
src/dfs_helper/: SConscript  dfs_helper_api.c  dfs_helper_api.h
src/graph_objects/: SConscript  complex_gather.c  gather.c  root.c  trace_data.c  (+2 more)
src/par/: CMakeLists.txt  SConscript  filestat.c  smooth.c  taup.c
src/su/: CMakeLists.txt  SConscript  fgetgthr.c  fgethdr.c  fgettr.c  fputgthr.c  fputtr.c  hdrpkge.c  valpkge.c
src/su/include/: mkhdr  mkheader  mkxdrbhdrsub  mkxdrhdrsub  segy.h  su.h  su_xdr.h
src/su/include/mkhdr.dSYM/Contents/Resources/DWARF/: mkhdr
src/su/include/mkheader.dSYM/Contents/Resources/DWARF/: mkheader
src/su/include/mkxdrbhdrsub.dSYM/Contents/Resources/DWARF/: mkxdrbhdrsub
src/su/include/mkxdrhdrsub.dSYM/Contents/Resources/DWARF/: mkxdrhdrsub
tests/: README.md  SConscript
(+153 files in other folders)
